Time: 30 ms (88.09%), Space: 59 MB (84.4%) - LeetHub